--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
 
     - name: Run tests
       run: |
-        chmod +x ./project/tests.sh && ./project/tests.sh
+        chmod +x tests.sh 
