--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,47 @@
 name: CI
 
+
 on:
   push:
     branches:
-     - main
-    paths:
-      - project/**
+      - main
 
 jobs:
-  build:
+  execute-pipeline:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      
-     # Install Python 3.12.0
-    - name: Set up Python version 3.12.0
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.12.0
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
 
-    - name: Run tests
-      run: |
-        chmod +x tests.sh 
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./project/requirements.txt 
+          pip install pytest
+
+      - name: Set execute permissions and run pipeline
+        run: |
+          cd project
+          chmod +x pipeline.sh
+          ./pipeline.sh
+       
+          
+      - name: Set execute permissions and run tests
+        run: |
+          cd project
+          chmod +x tests.sh
+          ./tests.sh
+       
+
+      # store output files in the data folder
+      - name: Upload output files
+        uses: actions/upload-artifact@v2
+        with:
+          name: output-files
+          path: ./data/*.sqlite
