--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./project/requirements.txt 
+          pip install -r project/requirements.txt
           pip install pytest
 
       - name: Set execute permissions and run pipeline
@@ -29,18 +29,28 @@ jobs:
           cd project
           chmod +x pipeline.sh
           ./pipeline.sh
-       
-          
+
+      # Debugging output
+      - name: Check current directory and list files after pipeline
+        run: |
+          pwd
+          ls -la
+
       - name: Set execute permissions and run tests
         run: |
           cd project
           chmod +x tests.sh
           ./tests.sh
-       
 
-      # store output files in the data folder
+      # Debugging output
+      - name: Check current directory and list files after tests
+        run: |
+          pwd
+          ls -la
+
+      # Store output files in the data folder
       - name: Upload output files
         uses: actions/upload-artifact@v2
         with:
           name: output-files
-          path: ./data/*.sqlite
+          path: data/*.sqlite
